<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditRentActivity">


    <ImageView
        android:id="@+id/imageEdit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:src="@drawable/ic_edit" />

    <EditText
        android:id="@+id/rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageEdit"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_rent"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/ristan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_ristan"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/electricity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ristan"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_elect"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/electricity"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_net"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/stairs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/internet"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_stairs"
        android:inputType="numberDecimal"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/peopleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stairs"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:hint="@string/text_numPeople"
        android:text="@string/text_numPeople" />

    <Spinner
        android:id="@+id/peopleNum"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/peopleText"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:background="@android:drawable/btn_dropdown"
        android:gravity="center"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/peopleNum"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:hint="@string/text_date"
        android:text="@string/text_date" />

    <Spinner
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/dateText"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="110dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background"
        android:hint="@string/button_change"
        android:text="IZMIJENI"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>